# sancus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml  justfile  setup.py  shell.nix
.github/workflows/: check.yml  release-plz.yml
src/: file_info.rs  lib.rs  license_detector.rs  license_info.rs  license_text.rs  main.rs  rpm_info.rs  settings.rs  third_party_licenses.rs  vcpkg_spdx.rs
