[package]
name = "sancus"
version = "0.1.1"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/x-software-com/sancus/"
repository = "https://github.com/x-software-com/sancus/"
description = "Sancus is an open-source tool that extracts third-party license information from a deployment-ready application"
readme = "README.md"
edition = "2021"
rust-version = "1.80"

[lib]
name = "sancus_lib"
path = "src/lib.rs"

[[bin]]
name = "sancus"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["bin-dependencies"]
bin-dependencies = ["flexi_logger", "clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
flexi_logger = { version = "0.29", optional = true }
log = "0.4"
anyhow = { version = "1" }
spdx = { version = "0.10", features = ["text"] }
spdx-rs = "0.5"
serde_json = "1"
termtree = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
