[package]
name = "sancus"
version = "0.1.5"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/x-software-com/sancus/"
repository = "https://github.com/x-software-com/sancus/"
description = "Sancus is an open-source tool that extracts third-party license information from a deployment-ready application"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[lib]
name = "sancus_lib"
path = "src/lib.rs"

[[bin]]
name = "sancus"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["bin-dependencies"]
bin-dependencies = ["flexi_logger", "clap"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
flexi_logger = { version = "0.31.7", optional = true }
log = "0.4.28"
anyhow = { version = "1.0.100" }
spdx = { version = "0.12.0", features = ["text"] }
spdx-rs = "0.5.5"
serde_json = "1.0.145"
termtree = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_bw = "2.5.1"
regex = "1.12.2"
