[package]
name = "sancus"
version = "0.1.7"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/x-software-com/sancus/"
repository = "https://github.com/x-software-com/sancus/"
description = "Sancus is an open-source tool that extracts third-party license information from a deployment-ready application"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[lib]
name = "sancus_lib"
path = "src/lib.rs"

[[bin]]
name = "sancus"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["bin-dependencies"]
bin-dependencies = ["flexi_logger", "clap", "scan", "debug"]
scan = ["spdx-rs", "serde_yaml_bw", "regex", "dep:termtree", "log"]
debug = ["dep:termtree", "log"]

[dependencies]
clap = { version = "4.5.54", default-features = false, features = [
    "std",
    "derive",
], optional = true }
flexi_logger = { version = "0.31.7", default-features = false, optional = true }
log = { version = "0.4.29", default-features = false, optional = true }
anyhow = { version = "1.0.100", default-features = false }
spdx = { version = "0.13.0", default-features = false, features = ["text"] }
spdx-rs = { version = "0.5.5", default-features = false, optional = true }
serde_json = { version = "1.0.145", default-features = false, features = [
    "alloc",
] }
termtree = { version = "0.5.1", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_yaml_bw = { version = "2.5.1", default-features = false, optional = true }
regex = { version = "1.12.2", default-features = false, optional = true }
